Move containers from LCL to LazUtils. DynamicArray, DynHashArray, DynQueue, Maps, StringHashList, ExtendedStrings, TextStrings.
 SVN 53737@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2998,12 +2998,16 @@ components/lazutils/Makefile.fpc svneol=native#text/plain
 components/lazutils/asiancodepagefunctions.inc svneol=native#text/pascal
 components/lazutils/asiancodepages.inc svneol=native#text/pascal
 components/lazutils/avglvltree.pas svneol=native#text/pascal
+components/lazutils/dynamicarray.pas svneol=native#text/pascal
+components/lazutils/dynhasharray.pp svneol=native#text/pascal
+components/lazutils/dynqueue.pas svneol=native#text/pascal
 components/lazutils/easylazfreetype.pas svneol=native#text/pascal
 components/lazutils/examples/LookupStringList/ReadMe.txt svneol=native#text/plain
 components/lazutils/examples/LookupStringList/TDedupeDemo.lpi svneol=native#text/plain
 components/lazutils/examples/LookupStringList/TDedupeDemo.lpr svneol=native#text/pascal
 components/lazutils/examples/LookupStringList/main.lfm svneol=native#text/plain
 components/lazutils/examples/LookupStringList/main.pas svneol=native#text/pascal
+components/lazutils/extendedstrings.pas svneol=native#text/pascal
 components/lazutils/fileutil.inc svneol=native#text/pascal
 components/lazutils/fileutil.pas svneol=native#text/pascal
 components/lazutils/fpcadds.pas svneol=native#text/pascal
@@ -3072,13 +3076,16 @@ components/lazutils/lazutilsstrconsts.pas svneol=native#text/pascal
 components/lazutils/lconvencoding.pas svneol=native#text/pascal
 components/lazutils/lcsvutils.pas svneol=native#text/pascal
 components/lazutils/lookupstringlist.pas svneol=native#text/pascal
+components/lazutils/maps.pp svneol=native#text/pascal
 components/lazutils/masks.pas svneol=native#text/pascal
 components/lazutils/paswstring.pas svneol=native#text/pascal
+components/lazutils/stringhashlist.pas svneol=native#text/pascal
 components/lazutils/test/LazUnicodeTest.lpi svneol=native#text/plain
 components/lazutils/test/LazUnicodeTest.lpr svneol=native#text/pascal
 components/lazutils/test/TestLazStorageMem.lpi svneol=native#text/plain
 components/lazutils/test/TestLazStorageMem.lpr svneol=native#text/plain
 components/lazutils/test/testlazstoragememcase1.pas svneol=native#text/plain
+components/lazutils/textstrings.pas svneol=native#text/pascal
 components/lazutils/ttcache.pas svneol=native#text/pascal
 components/lazutils/ttcalc.pas svneol=native#text/pascal
 components/lazutils/ttcalc1.inc svneol=native#text/pascal
@@ -7000,13 +7007,9 @@ lcl/dbgrids.pas svneol=native#text/pascal
 lcl/defaulttranslator.pas svneol=native#text/pascal
 lcl/dialog_icons.res -text
 lcl/dialogs.pp svneol=native#text/pascal
-lcl/dynamicarray.pas svneol=native#text/pascal
-lcl/dynhasharray.pp svneol=native#text/pascal
-lcl/dynqueue.pas svneol=native#text/pascal
 lcl/editbtn.pas svneol=native#text/pascal
 lcl/extctrls.pp svneol=native#text/plain
 lcl/extdlgs.pas svneol=native#text/pascal
-lcl/extendedstrings.pas svneol=native#text/pascal
 lcl/extgraphics.pas svneol=native#text/pascal
 lcl/filectrl.pp svneol=native#text/pascal
 lcl/forms.pp svneol=native#text/pascal
@@ -7932,7 +7935,6 @@ lcl/lclversion.pas svneol=native#text/pascal
 lcl/ldocktree.pas svneol=native#text/plain
 lcl/lmessages.pp svneol=native#text/pascal
 lcl/lresources.pp svneol=native#text/pascal
-lcl/maps.pp svneol=native#text/pascal
 lcl/maskedit.pp svneol=native#text/pascal
 lcl/menus.pp svneol=native#text/pascal
 lcl/nonwin32/README.txt svneol=native#text/plain
@@ -7950,7 +7952,6 @@ lcl/shellctrls.pas svneol=native#text/pascal
 lcl/spin.pp svneol=native#text/pascal
 lcl/stdactns.pas svneol=native#text/pascal
 lcl/stdctrls.pp svneol=native#text/pascal
-lcl/stringhashlist.pas svneol=native#text/pascal
 lcl/templates/template.inc svneol=native#text/pascal
 lcl/templates/template.pp svneol=native#text/pascal
 lcl/tests/test1_1simpleform1.lpi svneol=native#text/plain
@@ -7986,7 +7987,6 @@ lcl/tests/test5_1asyncprocess.lpr svneol=native#text/plain
 lcl/tests/test5_1worker.pas svneol=native#text/plain
 lcl/tests/test6_1masks.lpi svneol=native#text/plain
 lcl/tests/test6_1masks.lpr svneol=native#text/plain
-lcl/textstrings.pas svneol=native#text/pascal
 lcl/themes.pas svneol=native#text/pascal
 lcl/tmschema.pas svneol=native#text/pascal
 lcl/toolwin.pp svneol=native#text/pascal
