Move Translations unit from LCL to LazUtils.
 SVN 53740@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3086,6 +3086,7 @@ components/lazutils/test/TestLazStorageMem.lpi svneol=native#text/plain
 components/lazutils/test/TestLazStorageMem.lpr svneol=native#text/plain
 components/lazutils/test/testlazstoragememcase1.pas svneol=native#text/plain
 components/lazutils/textstrings.pas svneol=native#text/pascal
+components/lazutils/translations.pas svneol=native#text/pascal
 components/lazutils/ttcache.pas svneol=native#text/pascal
 components/lazutils/ttcalc.pas svneol=native#text/pascal
 components/lazutils/ttcalc1.inc svneol=native#text/pascal
@@ -7990,7 +7991,6 @@ lcl/tests/test6_1masks.lpr svneol=native#text/plain
 lcl/themes.pas svneol=native#text/pascal
 lcl/tmschema.pas svneol=native#text/pascal
 lcl/toolwin.pp svneol=native#text/pascal
-lcl/translations.pas svneol=native#text/pascal
 lcl/update_allunits.lpi svneol=native#text/plain
 lcl/update_allunits.lpr svneol=native#text/plain
 lcl/utrace.pp svneol=native#text/pascal
