updated lpl files
 SVN 53756@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -8088,6 +8088,7 @@ packager/globallinks/instantfpclaz-1.lpl svneol=native#text/plain
 packager/globallinks/jcfidelazarus-2.lpl svneol=native#text/plain
 packager/globallinks/jumptoimplementation-0.lpl svneol=native#text/plain
 packager/globallinks/lazactivex-0.1.lpl svneol=native#text/plain
+packager/globallinks/lazaruspackagemanager-0.0.1.lpl svneol=native#text/plain
 packager/globallinks/lazc-0.1.lpl svneol=native#text/plain
 packager/globallinks/lazcontroldsgn-0.lpl svneol=native#text/plain
 packager/globallinks/lazcontrols-1.0.1.lpl svneol=native#text/plain
@@ -8123,6 +8124,7 @@ packager/globallinks/lr_codereport_pkg-1.lpl svneol=native#text/plain
 packager/globallinks/lr_dialogdesign-0.3.1.lpl svneol=native#text/plain
 packager/globallinks/lr_extexp-0.lpl svneol=native#text/plain
 packager/globallinks/lr_officeimport-0.lpl svneol=native#text/plain
+packager/globallinks/lr_pdfexport-0.9.lpl svneol=native#text/plain
 packager/globallinks/lr_sqldb-0.2.2.lpl svneol=native#text/plain
 packager/globallinks/lr_tdbf-0.1.1.lpl svneol=native#text/plain
 packager/globallinks/lr_zeosdb-0.2.2.lpl svneol=native#text/plain
@@ -8151,6 +8153,8 @@ packager/globallinks/simpleideintf-0.lpl svneol=native#text/plain
 packager/globallinks/sparta_dockedformeditor-0.lpl svneol=native#text/plain
 packager/globallinks/sparta_generics-0.lpl svneol=native#text/plain
 packager/globallinks/sparta_mdi-0.lpl svneol=native#text/plain
+packager/globallinks/sparta_smartformeditor-0.lpl svneol=native#text/plain
+packager/globallinks/sparta_toolsapi-0.lpl svneol=native#text/plain
 packager/globallinks/sqldblaz-1.0.2.lpl svneol=native#text/plain
 packager/globallinks/sqlite3laz-0.4.lpl svneol=native#text/plain
 packager/globallinks/sqlitelaz-0.4.lpl svneol=native#text/plain
