--- a/.gitattributes
+++ b/.gitattributes
@@ -4992,9 +4992,14 @@ docs/xml/README.txt svneol=native#text/plain
 docs/xml/StyleGuide.txt svneol=native#text/plain
 docs/xml/ide/aboutfrm.xml svneol=native#text/plain
 docs/xml/lazutils/avglvltree.xml svneol=native#text/plain
+docs/xml/lazutils/dynamicarray.xml svneol=native#text/plain
+docs/xml/lazutils/dynhasharray.xml svneol=native#text/plain
+docs/xml/lazutils/dynqueue.xml svneol=native#text/plain
 docs/xml/lazutils/easylazfreetype.xml svneol=native#text/plain
+docs/xml/lazutils/extendedstrings.xml svneol=native#text/plain
 docs/xml/lazutils/fileutil.xml svneol=native#text/plain
 docs/xml/lazutils/fpcadds.xml svneol=LF#text/xml eol=lf
+docs/xml/lazutils/fpmake.xml svneol=native#text/plain
 docs/xml/lazutils/laz2_dom.xml svneol=native#text/plain
 docs/xml/lazutils/laz2_xmlcfg.xml svneol=native#text/plain
 docs/xml/lazutils/laz2_xmlread.xml svneol=native#text/plain
@@ -5007,17 +5012,23 @@ docs/xml/lazutils/laz_xmlread.xml svneol=native#text/plain
 docs/xml/lazutils/laz_xmlstreaming.xml svneol=native#text/plain
 docs/xml/lazutils/laz_xmlwrite.xml svneol=native#text/plain
 docs/xml/lazutils/lazclasses.xml svneol=native#text/plain
+docs/xml/lazutils/lazcollections.xml svneol=native#text/plain
 docs/xml/lazutils/lazconfigstorage.xml svneol=native#text/plain
 docs/xml/lazutils/lazdbglog.xml svneol=native#text/plain
+docs/xml/lazutils/lazfglhash.xml svneol=native#text/plain
 docs/xml/lazutils/lazfilecache.xml svneol=native#text/plain
 docs/xml/lazutils/lazfileutils.xml svneol=native#text/plain
 docs/xml/lazutils/lazfreetype.xml svneol=native#text/plain
 docs/xml/lazutils/lazfreetypefontcollection.xml svneol=native#text/plain
+docs/xml/lazutils/lazfreetypefpimagedrawer.xml svneol=native#text/plain
+docs/xml/lazutils/lazlinkedlist.xml svneol=native#text/plain
+docs/xml/lazutils/lazlistclasses.xml svneol=native#text/plain
 docs/xml/lazutils/lazlogger.xml svneol=native#text/xml
 docs/xml/lazutils/lazloggerbase.xml svneol=native#text/plain
 docs/xml/lazutils/lazloggerdummy.xml svneol=native#text/plain
 docs/xml/lazutils/lazloggerprofiling.xml svneol=native#text/plain
 docs/xml/lazutils/lazmethodlist.xml svneol=native#text/plain
+docs/xml/lazutils/lazunicode.xml svneol=native#text/plain
 docs/xml/lazutils/lazutf16.xml svneol=native#text/plain
 docs/xml/lazutils/lazutf8.xml svneol=native#text/plain
 docs/xml/lazutils/lazutf8classes.xml svneol=native#text/plain
@@ -5026,9 +5037,14 @@ docs/xml/lazutils/lazutilities.xml svneol=native#text/plain
 docs/xml/lazutils/lazutils.xml svneol=native#text/plain
 docs/xml/lazutils/lazutilsstrconsts.xml svneol=native#text/plain
 docs/xml/lazutils/lconvencoding.xml svneol=native#text/plain
+docs/xml/lazutils/lcsvutils.xml svneol=native#text/plain
 docs/xml/lazutils/lookupstringlist.xml svneol=native#text/plain
+docs/xml/lazutils/maps.xml svneol=native#text/plain
 docs/xml/lazutils/masks.xml svneol=native#text/plain
 docs/xml/lazutils/paswstring.xml svneol=native#text/plain
+docs/xml/lazutils/stringhashlist.xml svneol=native#text/plain
+docs/xml/lazutils/textstrings.xml svneol=native#text/plain
+docs/xml/lazutils/translations.xml svneol=native#text/plain
 docs/xml/lazutils/ttcache.xml svneol=native#text/plain
 docs/xml/lazutils/ttcalc.xml svneol=native#text/plain
 docs/xml/lazutils/ttcmap.xml svneol=native#text/plain
@@ -5063,6 +5079,7 @@ docs/xml/lcl/commctrl.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/controls.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/customdrawn_android.xml svneol=native#text/plain
 docs/xml/lcl/customdrawn_common.xml svneol=native#text/plain
+docs/xml/lcl/customdrawn_mac.xml svneol=native#text/plain
 docs/xml/lcl/customdrawn_winxp.xml svneol=native#text/plain
 docs/xml/lcl/customdrawncontrols.xml svneol=native#text/plain
 docs/xml/lcl/customdrawndrawers.xml svneol=native#text/plain
@@ -5098,6 +5115,7 @@ docs/xml/lcl/graphmath.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/graphtype.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/graphutil.xml svneol=native#text/plain
 docs/xml/lcl/grids.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/groupededit.xml svneol=native#text/plain
 docs/xml/lcl/helpintfs.xml svneol=native#text/plain
 docs/xml/lcl/icnstypes.xml svneol=native#text/plain
 docs/xml/lcl/imagelistcache.xml svneol=native#text/plain
@@ -5155,9 +5173,11 @@ docs/xml/lcl/lclclasses.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lclintf.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lclmemmanager.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lclmessageglue.xml svneol=native#text/plain
+docs/xml/lcl/lclplatformdef.xml svneol=native#text/plain
 docs/xml/lcl/lclproc.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lclrescache.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lclstrconsts.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/lcltaskdialog.xml svneol=native#text/plain
 docs/xml/lcl/lcltranslator.xml svneol=native#text/plain
 docs/xml/lcl/lcltype.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lclunicodedata.xml svneol=native#text/plain
