--- a/.gitattributes
+++ b/.gitattributes
@@ -7765,6 +7765,48 @@ lcl/interfaces/qt/qtwspairsplitter.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtwsspin.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtwsstdctrls.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtx11.inc svneol=native#text/plain
+lcl/interfaces/qt5/Makefile svneol=native#text/plain
+lcl/interfaces/qt5/Makefile.compiled svneol=native#text/plain
+lcl/interfaces/qt5/Makefile.fpc svneol=native#text/plain
+lcl/interfaces/qt5/README.txt svneol=native#text/plain
+lcl/interfaces/qt5/alllclintfunits.pas svneol=native#text/plain
+lcl/interfaces/qt5/interfaces.pp svneol=native#text/plain
+lcl/interfaces/qt5/issues.xml -text svneol=unset#application/xml
+lcl/interfaces/qt5/qt5.pas svneol=native#text/plain
+lcl/interfaces/qt5/qt56.pas svneol=native#text/plain
+lcl/interfaces/qt5/qtcaret.pas svneol=native#text/plain
+lcl/interfaces/qt5/qtdefines.inc svneol=native#text/plain
+lcl/interfaces/qt5/qtint.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtlclintf.inc svneol=native#text/plain
+lcl/interfaces/qt5/qtlclintfh.inc svneol=native#text/plain
+lcl/interfaces/qt5/qtobject.inc svneol=native#text/plain
+lcl/interfaces/qt5/qtobjects.pas svneol=native#text/plain
+lcl/interfaces/qt5/qtpagecontrol.inc svneol=native#text/plain
+lcl/interfaces/qt5/qtprivate.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtproc.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtsystemtrayicon.pas svneol=native#text/plain
+lcl/interfaces/qt5/qtthemes.pas svneol=native#text/plain
+lcl/interfaces/qt5/qtwidgets.pas svneol=native#text/plain
+lcl/interfaces/qt5/qtwinapi.inc svneol=native#text/plain
+lcl/interfaces/qt5/qtwinapih.inc svneol=native#text/plain
+lcl/interfaces/qt5/qtwsbuttons.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwscalendar.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwschecklst.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwscomctrls.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwscontrols.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwsdesigner.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwsdialogs.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwsextctrls.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwsextdlgs.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwsfactory.pas svneol=native#text/plain
+lcl/interfaces/qt5/qtwsforms.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwsgrids.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwsimglist.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwsmenus.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwspairsplitter.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwsspin.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtwsstdctrls.pp svneol=native#text/plain
+lcl/interfaces/qt5/qtx11.inc svneol=native#text/plain
 lcl/interfaces/win32/Makefile.compiled svneol=native#text/plain
 lcl/interfaces/win32/README.txt svneol=native#text/plain
 lcl/interfaces/win32/alllclintfunits.pas svneol=native#text/plain
