Make LCL and LazUtils compile for Amiga systems (NoGUI). Issue #31186, patch from Marcus Sackrow.
 SVN 53853@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2951,6 +2951,7 @@ components/lazutils/LazLoggerIntf.inc svneol=native#text/pascal
 components/lazutils/Makefile svneol=native#text/plain
 components/lazutils/Makefile.compiled svneol=native#text/plain
 components/lazutils/Makefile.fpc svneol=native#text/plain
+components/lazutils/amigalazfileutils.inc svneol=native#text/plain
 components/lazutils/asiancodepagefunctions.inc svneol=native#text/pascal
 components/lazutils/asiancodepages.inc svneol=native#text/pascal
 components/lazutils/avglvltree.pas svneol=native#text/pascal
@@ -7241,6 +7242,7 @@ lcl/include/statusbar.inc svneol=native#text/pascal
 lcl/include/statuspanel.inc svneol=native#text/pascal
 lcl/include/statuspanels.inc svneol=native#text/pascal
 lcl/include/sysenvapis.inc svneol=native#text/pascal
+lcl/include/sysenvapis_amiga.inc svneol=native#text/plain
 lcl/include/sysenvapis_mac.inc svneol=native#text/pascal
 lcl/include/sysenvapis_unix.inc svneol=native#text/pascal
 lcl/include/sysenvapis_win.inc svneol=native#text/pascal
