IDEIntf: added help
 SVN 53875@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1828,12 +1828,14 @@ components/ideintf/docs/compoptsintf.xml svneol=native#text/plain
 components/ideintf/docs/findcommandsbyshortcut.pas svneol=native#text/plain
 components/ideintf/docs/formeditingintf.xml svneol=native#text/plain
 components/ideintf/docs/idecommands.xml svneol=native#text/plain
+components/ideintf/docs/idehelpintf.xml svneol=native#text/plain
 components/ideintf/docs/ideimagesintf.xml svneol=native#text/plain
 components/ideintf/docs/ideoptionsintf.xml svneol=native#text/plain
 components/ideintf/docs/lazideintf.xml svneol=native#text/plain
 components/ideintf/docs/objectinspector.xml svneol=native#text/plain
 components/ideintf/docs/packageintf.xml svneol=native#text/plain
 components/ideintf/docs/projectintf.xml svneol=native#text/plain
+components/ideintf/docs/propedits.xml svneol=native#text/plain
 components/ideintf/editorsyntaxhighlighterdef.pas svneol=native#text/pascal
 components/ideintf/fieldseditor.lfm svneol=native#text/plain
 components/ideintf/fieldseditor.pas svneol=native#text/pascal
