TAChart: Add new demo "barseriestool" to demonstrate the new BarSeries property ToolTarget.
 SVN 53897@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -4205,6 +4205,10 @@ components/tachart/demo/axistransf/axistransfdemo.lpi svneol=native#text/plain
 components/tachart/demo/axistransf/axistransfdemo.lpr svneol=native#text/pascal
 components/tachart/demo/axistransf/main.lfm svneol=native#text/plain
 components/tachart/demo/axistransf/main.pas svneol=native#text/pascal
+components/tachart/demo/barseriestools/barseriestools.lpi svneol=native#text/plain
+components/tachart/demo/barseriestools/barseriestools.lpr svneol=native#text/plain
+components/tachart/demo/barseriestools/main.lfm svneol=native#text/plain
+components/tachart/demo/barseriestools/main.pas svneol=native#text/plain
 components/tachart/demo/basic/demo.lpi svneol=native#text/plain
 components/tachart/demo/basic/demo.lpr svneol=native#text/plain
 components/tachart/demo/basic/unit1.lfm svneol=native#text/plain
