LCL: Add support for MUI widgetset (AmigaOS, MorphOS, AROS) by Marcus Sackrow.
 SVN 53941@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -7728,6 +7728,32 @@ lcl/interfaces/gtk3/gtk3wsstdctrls.pp svneol=native#text/plain
 lcl/interfaces/gtk3/interfaces.pp svneol=native#text/plain
 lcl/interfaces/lcl.lpk svneol=native#text/plain
 lcl/interfaces/lcl.pas svneol=native#text/plain
+lcl/interfaces/mui/Makefile svneol=native#text/plain
+lcl/interfaces/mui/Makefile.fpc svneol=native#text/plain
+lcl/interfaces/mui/alllclintfunits.pas svneol=native#text/pascal
+lcl/interfaces/mui/interfaces.pp svneol=native#text/pascal
+lcl/interfaces/mui/muibaseunit.pas svneol=native#text/pascal
+lcl/interfaces/mui/muicomctrls.pas svneol=native#text/pascal
+lcl/interfaces/mui/muidrawing.pas svneol=native#text/pascal
+lcl/interfaces/mui/muiformsunit.pas svneol=native#text/pascal
+lcl/interfaces/mui/muiglobal.pas svneol=native#text/pascal
+lcl/interfaces/mui/muiint.pp svneol=native#text/pascal
+lcl/interfaces/mui/muistdctrls.pas svneol=native#text/pascal
+lcl/interfaces/mui/muistringsunit.pas svneol=native#text/pascal
+lcl/interfaces/mui/muithemes.pas svneol=native#text/pascal
+lcl/interfaces/mui/muiwinapi.inc svneol=native#text/plain
+lcl/interfaces/mui/muiwinapih.inc svneol=native#text/plain
+lcl/interfaces/mui/muiwsbuttons.pp svneol=native#text/pascal
+lcl/interfaces/mui/muiwscomctrls.pp svneol=native#text/pascal
+lcl/interfaces/mui/muiwscontrols.pp svneol=native#text/pascal
+lcl/interfaces/mui/muiwsdialogs.pp svneol=native#text/pascal
+lcl/interfaces/mui/muiwsfactory.pas svneol=native#text/pascal
+lcl/interfaces/mui/muiwsforms.pp svneol=native#text/pascal
+lcl/interfaces/mui/muiwsmenus.pp svneol=native#text/pascal
+lcl/interfaces/mui/muiwsspin.pp svneol=native#text/pascal
+lcl/interfaces/mui/muiwsstdctrls.pp svneol=native#text/pascal
+lcl/interfaces/mui/tagsparamshelper.pas svneol=native#text/pascal
+lcl/interfaces/mui/vinfo.pas svneol=native#text/pascal
 lcl/interfaces/nogui/Makefile svneol=native#text/plain
 lcl/interfaces/nogui/Makefile.compiled svneol=native#text/plain
 lcl/interfaces/nogui/Makefile.fpc svneol=native#text/plain
