Opkman: Begin implementing support for multiple repositories.
 SVN 53956@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3313,6 +3313,8 @@ components/onlinepackagemanager/opkman_packagelistfrm.lfm svneol=native#text/pla
 components/onlinepackagemanager/opkman_packagelistfrm.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_progressfrm.lfm svneol=native#text/plain
 components/onlinepackagemanager/opkman_progressfrm.pas svneol=native#text/pascal
+components/onlinepackagemanager/opkman_repositories.lfm -text svneol=native#plain/text
+components/onlinepackagemanager/opkman_repositories.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_serializablepackages.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_timer.pas svneol=native#text/pascal
 components/onlinepackagemanager/opkman_updates.pas svneol=native#text/pascal
