--- a/.gitattributes
+++ b/.gitattributes
@@ -4331,6 +4331,11 @@ components/tachart/demo/rotate/Main.lfm svneol=native#text/pascal
 components/tachart/demo/rotate/Main.pas svneol=native#text/pascal
 components/tachart/demo/rotate/rotatedemo.lpi svneol=native#text/plain
 components/tachart/demo/rotate/rotatedemo.lpr svneol=native#text/pascal
+components/tachart/demo/runtime/chartstyles/project1.lpi svneol=native#text/plain
+components/tachart/demo/runtime/chartstyles/project1.lpr svneol=native#text/plain
+components/tachart/demo/runtime/chartstyles/readme.txt svneol=native#text/plain
+components/tachart/demo/runtime/chartstyles/unit1.lfm svneol=native#text/plain
+components/tachart/demo/runtime/chartstyles/unit1.pas svneol=native#text/plain
 components/tachart/demo/save/main.lfm svneol=native#text/plain
 components/tachart/demo/save/main.pas svneol=native#text/plain
 components/tachart/demo/save/savedemo.lpi svneol=native#text/plain
