TAChart: Add example to demonstrate usage of Axis.Marks.AtDataOnly
 SVN 54024@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -4315,6 +4315,10 @@ components/tachart/demo/panes-2/project1.lpi svneol=native#text/pascal
 components/tachart/demo/panes-2/project1.lpr svneol=native#text/pascal
 components/tachart/demo/panes-2/unit1.lfm svneol=native#text/pascal
 components/tachart/demo/panes-2/unit1.pas svneol=native#text/pascal
+components/tachart/demo/panes-3/project1.lpi svneol=native#text/plain
+components/tachart/demo/panes-3/project1.lpr svneol=native#text/plain
+components/tachart/demo/panes-3/unit1.lfm svneol=native#text/plain
+components/tachart/demo/panes-3/unit1.pas svneol=native#text/plain
 components/tachart/demo/panes/Main.lfm svneol=native#text/plain
 components/tachart/demo/panes/Main.pas svneol=native#text/pascal
 components/tachart/demo/panes/panes.lpi svneol=native#text/plain
