TAChart: Add new demo for chartcombobox
 SVN 54105@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -4228,6 +4228,10 @@ components/tachart/demo/clone/Main.lfm svneol=native#text/plain
 components/tachart/demo/clone/Main.pas svneol=native#text/pascal
 components/tachart/demo/clone/clonedemo.lpi svneol=native#text/plain
 components/tachart/demo/clone/clonedemo.lpr svneol=native#text/pascal
+components/tachart/demo/combobox/combodemo.lpi svneol=native#text/plain
+components/tachart/demo/combobox/combodemo.lpr svneol=native#text/plain
+components/tachart/demo/combobox/main.lfm svneol=native#text/plain
+components/tachart/demo/combobox/main.pas svneol=native#text/plain
 components/tachart/demo/db/dbdemo.lpi svneol=native#text/plain
 components/tachart/demo/db/dbdemo.lpr svneol=native#text/pascal
 components/tachart/demo/db/main.lfm svneol=native#text/plain
