--- a/.gitattributes
+++ b/.gitattributes
@@ -3277,6 +3277,7 @@ components/onlinepackagemanager/languages/opkman_VirtualTrees.ru.po svneol=nativ
 components/onlinepackagemanager/languages/opkman_const.de.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.es.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.fi.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_const.fr.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.ru.po svneol=native#text/plain
@@ -3614,6 +3615,7 @@ components/printers/win32/winutilprn.pas svneol=native#text/pascal
 components/printers/win32/winutilprnconst.inc svneol=native#text/pascal
 components/projectgroups/README.txt svneol=native#text/plain
 components/projectgroups/languages/projectgroupstrconst.de.po svneol=native#text/plain
+components/projectgroups/languages/projectgroupstrconst.fr.po svneol=native#text/plain
 components/projectgroups/languages/projectgroupstrconst.hu.po svneol=native#text/plain
 components/projectgroups/languages/projectgroupstrconst.it.po svneol=native#text/plain
 components/projectgroups/languages/projectgroupstrconst.po svneol=native#text/plain
