Translations: French translation update by Gilles Vasseur, bug 31373
 SVN 54150@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3271,6 +3271,7 @@ components/onlinepackagemanager/images/Tree_Buttons/StarFull.png -text svneol=un
 components/onlinepackagemanager/images/Tree_Buttons/StarFull_Blue.png -text svneol=unset#image/png
 components/onlinepackagemanager/images/Tree_Buttons/StarHalfFull.png -text svneol=unset#image/png
 components/onlinepackagemanager/languages/opkman_VirtualTrees.fi.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_VirtualTrees.fr.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_VirtualTrees.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_VirtualTrees.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_VirtualTrees.ru.po svneol=native#text/plain
@@ -3282,10 +3283,12 @@ components/onlinepackagemanager/languages/opkman_const.hu.po svneol=native#text/
 components/onlinepackagemanager/languages/opkman_const.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_const.ru.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_httpclient.fi.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_httpclient.fr.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_httpclient.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_httpclient.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_httpclient.ru.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_zip.fi.po svneol=native#text/plain
+components/onlinepackagemanager/languages/opkman_zip.fr.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_zip.hu.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_zip.po svneol=native#text/plain
 components/onlinepackagemanager/languages/opkman_zip.ru.po svneol=native#text/plain
