Examples: Add example demonstrating cell text overflow in a StringGrid
 SVN 54171@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -5623,6 +5623,11 @@ examples/fpdocmanager/fupdateview.pas svneol=native#text/pascal
 examples/fpdocmanager/ulpk.pp svneol=native#text/pascal
 examples/fpdocmanager/umakeskel.pas svneol=native#text/pascal
 examples/fpdocmanager/umanager.pas svneol=native#text/pascal
+examples/gridexamples/cell_overflow/celloverflow_demo.lpi svneol=native#text/plain
+examples/gridexamples/cell_overflow/celloverflow_demo.lpr svneol=native#text/plain
+examples/gridexamples/cell_overflow/comain.lfm svneol=native#text/plain
+examples/gridexamples/cell_overflow/comain.pas svneol=native#text/plain
+examples/gridexamples/cell_overflow/readme.txt svneol=native#text/plain
 examples/gridexamples/columneditors/main.lfm svneol=native#text/plain
 examples/gridexamples/columneditors/main.pas svneol=native#text/plain
 examples/gridexamples/columneditors/readme.txt svneol=native#text/plain
