TAChart: Add new demo "plotunit" how to create series at runtime.
 SVN 54241@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -4297,6 +4297,12 @@ components/tachart/demo/runtime/chartstyles/project1.lpr svneol=native#text/plai
 components/tachart/demo/runtime/chartstyles/readme.txt svneol=native#text/plain
 components/tachart/demo/runtime/chartstyles/unit1.lfm svneol=native#text/plain
 components/tachart/demo/runtime/chartstyles/unit1.pas svneol=native#text/plain
+components/tachart/demo/runtime/plotunit/main.lfm svneol=native#text/plain
+components/tachart/demo/runtime/plotunit/main.pas svneol=native#text/plain
+components/tachart/demo/runtime/plotunit/plotdemo.lpi svneol=native#text/plain
+components/tachart/demo/runtime/plotunit/plotdemo.lpr svneol=native#text/plain
+components/tachart/demo/runtime/plotunit/readme.txt svneol=native#text/plain
+components/tachart/demo/runtime/plotunit/uplot.pas svneol=native#text/plain
 components/tachart/demo/save/main.lfm svneol=native#text/plain
 components/tachart/demo/save/main.pas svneol=native#text/plain
 components/tachart/demo/save/savedemo.lpi svneol=native#text/plain
