TAChart: Add new demo "datapointtools"
 SVN 54311@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -4184,6 +4184,10 @@ components/tachart/demo/combobox/combodemo.lpi svneol=native#text/plain
 components/tachart/demo/combobox/combodemo.lpr svneol=native#text/plain
 components/tachart/demo/combobox/main.lfm svneol=native#text/plain
 components/tachart/demo/combobox/main.pas svneol=native#text/plain
+components/tachart/demo/datapointtools/datapointtooldemo.lpi svneol=native#text/plain
+components/tachart/demo/datapointtools/datapointtooldemo.lpr svneol=native#text/plain
+components/tachart/demo/datapointtools/main.lfm svneol=native#text/plain
+components/tachart/demo/datapointtools/main.pas svneol=native#text/plain
 components/tachart/demo/db/dbdemo.lpi svneol=native#text/plain
 components/tachart/demo/db/dbdemo.lpr svneol=native#text/pascal
 components/tachart/demo/db/main.lfm svneol=native#text/plain
