TAChart: Add demo for creation of a dual-axis-chart at runtime.
 SVN 54329@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -4301,6 +4301,10 @@ components/tachart/demo/runtime/chartstyles/project1.lpr svneol=native#text/plai
 components/tachart/demo/runtime/chartstyles/readme.txt svneol=native#text/plain
 components/tachart/demo/runtime/chartstyles/unit1.lfm svneol=native#text/plain
 components/tachart/demo/runtime/chartstyles/unit1.pas svneol=native#text/plain
+components/tachart/demo/runtime/dualaxes/project1.lpi svneol=native#text/plain
+components/tachart/demo/runtime/dualaxes/project1.lpr svneol=native#text/plain
+components/tachart/demo/runtime/dualaxes/unit1.lfm svneol=native#text/plain
+components/tachart/demo/runtime/dualaxes/unit1.pas svneol=native#text/plain
 components/tachart/demo/runtime/plotunit/main.lfm svneol=native#text/plain
 components/tachart/demo/runtime/plotunit/main.pas svneol=native#text/plain
 components/tachart/demo/runtime/plotunit/plotdemo.lpi svneol=native#text/plain
