--- a/.gitattributes
+++ b/.gitattributes
@@ -8928,8 +8928,8 @@ packager/pkglinksdlg.pas svneol=native#text/plain
 packager/pkgmanager.pas svneol=native#text/pascal
 packager/pkgregisterbase.pas svneol=native#text/pascal
 packager/pkgvirtualuniteditor.pas svneol=native#text/pascal
-packager/projpackbase.pas svneol=native#text/pascal
 packager/projpackchecks.pas svneol=native#text/pascal
+packager/projpackcommon.pas svneol=native#text/pascal
 packager/registration/Makefile.compiled svneol=native#text/plain
 packager/registration/README.txt svneol=native#text/plain
 packager/registration/fcl.lpk svneol=native#text/plain
