IdeIntf: Separate an interface for PackageLinks.
 SVN 54407@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1871,6 +1871,7 @@ components/ideintf/objinspstrconsts.pas svneol=native#text/pascal
 components/ideintf/oifavoriteproperties.pas svneol=native#text/pascal
 components/ideintf/packagedependencyintf.pas svneol=native#text/pascal
 components/ideintf/packageintf.pas svneol=native#text/pascal
+components/ideintf/packagelinkintf.pas svneol=native#text/pascal
 components/ideintf/pagespropeditdlg.lfm svneol=native#text/plain
 components/ideintf/pagespropeditdlg.pas svneol=native#text/pascal
 components/ideintf/projectintf.pas svneol=native#text/pascal
