TAChart: Rename unit ipf to ipf_fix (in numlib_fix), remove units mdt and sle.
 SVN 54489@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -4376,9 +4376,7 @@ components/tachart/languages/tachartstrconsts.po svneol=native#text/plain
 components/tachart/languages/tachartstrconsts.ru.po svneol=native#text/plain
 components/tachart/languages/tachartstrconsts.se.po svneol=native#text/plain
 components/tachart/numlib_fix/direct.inc svneol=native#text/pascal
-components/tachart/numlib_fix/ipf.pas svneol=native#text/pascal
-components/tachart/numlib_fix/mdt.pas svneol=native#text/pascal
-components/tachart/numlib_fix/sle.pas svneol=native#text/pascal
+components/tachart/numlib_fix/ipf_fix.pas svneol=native#text/plain
 components/tachart/taanimatedsource.pas svneol=native#text/pascal
 components/tachart/taaxissource.pas svneol=native#text/pascal
 components/tachart/tabgrautils.pas svneol=native#text/pascal
